Fix overflow scrolling on mobile (#52)
* Helps with full page scroll

* Controls x/y scrolling on mobile main stats

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #181B20;
+  overflow: hidden;
 }
 
 ::selection {
@@ -440,7 +441,8 @@ body {
     padding: 1rem;
 
     max-height: 30vh;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     background: rgba(22, 23, 29, 0.5);
     backdrop-filter: saturate(180%) blur(10px);
